# cxx-playground

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Makefile  README.md  conanfile.py  cppcheck-suppressions.txt  naming.json  playground.code-workspace
.github/actions/conan_cache/restore/: action.yml
.github/actions/conan_cache/save/: action.yml
.github/actions/run_tests/: action.yml
.github/workflows/: tests-apple-clang.yml  tests-clang.yml  tests-gcc.yml  tests-msvc.yml  tests.yml  validate.yml
.github/workflows/cfg/: tools_conanfile.txt
benchmarks/: CMakeLists.txt  Makefile  conanfile.py
benchmarks/conan/profiles/: base  debug  release
benchmarks/src/: bench_concurrent.cc  bm_concurrent.cc  main.cc
conan/profiles/: apple-clang-15  base  clang-16  gcc-13  msvc-19.3
conan/profiles/ci/: apple-clang  clang  gcc  msvc
include/dlgr/: enum_flags.h  ring.h  ring_view.h
src/: dummy.cc
tests/: CMakeLists.txt
tests/src/: test_enum_flags.cc  test_ring.cc  test_ring_view.cc
tools/iwyu/: libcxx.imp
